--- a/index.html
+++ b/index.html
@@ -935,7 +935,7 @@
                 
                 // Simulate API call to Google Apps Script
                 // In a real implementation, this would be:
-                // const response = await fetch(YOUR_GOOGLE_SCRIPT_URL, { method: 'POST', body: JSON.stringify(transaction) });
+                // const response = await fetch(https://script.google.com/macros/s/AKfycbwzDiL19ElB3OjjrPTtkW5OPuECyTB56Gx_Sk8-ZtzDlmT1I3rgGwMFhkJQy-09ptqf/exec, { method: 'POST', body: JSON.stringify(transaction) });
                 
                 // For demo purposes, we'll simulate an API call
                 await new Promise(resolve => setTimeout(resolve, 1000));
@@ -1237,3 +1237,4 @@
     </script>
 </body>
 </html>
+
