--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
   </div>
 
   <script src="app.js"></script>
+  <script src="style.css"></script>
   <!-- Scan Confirmation Modal -->
 <div id="scan-confirmation-modal" class="modal hidden">
   <div class="modal-overlay"></div>
